[package]
name = "static-files-server"
version = "0.1.0"
edition = "2024"

[dependencies]
ctrlc = "3.5.2"
directories = "6.0.0"
flate2 = "1.1.9"
rand = "0.10.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
serde_yaml = "0.9.34"
walkdir = "2.5.0"
xxhash-rust = { version = "0.8.15", features = ["xxh3"] }
zip = "8.2.0"
