[package]
name = "Cask"
version = "0.1.0"
edition = "2024"

[profile.release]
opt-level = "s"
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true

[dependencies]
actix-web = "4.13.0"
clap = { version = "4.6.0", features = ["derive"] }
ctrlc = "3.5.2"
directories = "6.0.0"
flate2 = "1.1.9"
rand = "0.10.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
serde_yaml = "0.9.34"
sysinfo = "0.38.4"
walkdir = "2.5.0"
xxhash-rust = { version = "0.8.15", features = ["xxh3"] }
zip = "8.4.0"
actix-files = "0.6.10"
mime = { version = "0.3.17" }
tokio = "1.51.1"
